--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
+    "js-md5": "^0.8.0",
+    "qs": "^6.11.2",
     "vue": "^3.2.13",
+    "vue-layx": "^1.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
